--- a/Makefile.win
+++ b/Makefile.win
@@ -1,63 +1,39 @@
-# Project: Project1
+# Project: SS1
 # Makefile created by Dev-C++ 4.9.9.2
 
-CPP  = g++.exe -D__DEBUG__
-CC   = gcc.exe -D__DEBUG__
+CPP  = g++.exe
+CC   = gcc.exe
 WINDRES = windres.exe
 RES  = 
-OBJ  = Parser.o Tree.o Lib.o Scanner.o Array.o Compiler.o HashTable.o Generator.o main.o Assembler.o Cpu0.o OpTable.o $(RES)
-LINKOBJ  = Parser.o Tree.o Lib.o Scanner.o Array.o Compiler.o HashTable.o Generator.o main.o Assembler.o Cpu0.o OpTable.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib"  -g3 
-INCS =  -I"C:/Dev-Cpp/include" 
-CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
-BIN  = Ch12.exe
-CXXFLAGS = $(CXXINCS)   -g3
-CFLAGS = $(INCS)   -g3
+OBJ  = Scanner.o main.o Array.o Lib.o $(RES)
+LINKOBJ  = Scanner.o main.o Array.o Lib.o $(RES)
+LIBS =  -L"C:/Program Files/Dev-Cpp/Lib"  
+INCS =  -I"C:/Program Files/Dev-Cpp/Include" 
+CXXINCS =  -I"C:/Program Files/Dev-Cpp/lib/gcc/mingw32/3.4.5/include"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.5/backward"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.5/mingw32"  -I"C:/Program Files/Dev-Cpp/include/c++/3.4.5"  -I"C:/Program Files/Dev-Cpp/include"  -I"C:/Program Files/Dev-Cpp/"  -I"C:/Program Files/Dev-Cpp/include/3rdparty/wx/plotctrl"  -I"C:/Program Files/Dev-Cpp/include/3rdparty/wx/sheet"  -I"C:/Program Files/Dev-Cpp/include/3rdparty/wx/treemultictrl"  -I"C:/Program Files/Dev-Cpp/include/3rdparty/wx/things"  -I"C:/Program Files/Dev-Cpp/include/3rdparty/wx"  -I"C:/Program Files/Dev-Cpp/include/3rdparty"  -I"C:/Program Files/Dev-Cpp/include/common/wx/msw"  -I"C:/Program Files/Dev-Cpp/include/common/wx/generic"  -I"C:/Program Files/Dev-Cpp/include/common/wx/fl"  -I"C:/Program Files/Dev-Cpp/include/common/wx/gizmos"  -I"C:/Program Files/Dev-Cpp/include/common/wx/html"  -I"C:/Program Files/Dev-Cpp/include/common/wx/mmedia"  -I"C:/Program Files/Dev-Cpp/include/common/wx/net"  -I"C:/Program Files/Dev-Cpp/include/common/wx/ogl"  -I"C:/Program Files/Dev-Cpp/include/common/wx/plot"  -I"C:/Program Files/Dev-Cpp/include/common/wx/protocol"  -I"C:/Program Files/Dev-Cpp/include/common/wx/stc"  -I"C:/Program Files/Dev-Cpp/include/common/wx/svg"  -I"C:/Program Files/Dev-Cpp/include/common/wx/xml"  -I"C:/Program Files/Dev-Cpp/include/common/wx/xrc"  -I"C:/Program Files/Dev-Cpp/include/common/wx"  -I"C:/Program Files/Dev-Cpp/include/common" 
+BIN  = SS1.exe
+CXXFLAGS = $(CXXINCS)  
+CFLAGS = $(INCS)  
 RM = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
 
-all: all-before Ch12.exe all-after
+all: all-before SS1.exe all-after
 
 
 clean: clean-custom
 	${RM} $(OBJ) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(LINKOBJ) -o "Ch12.exe" $(LIBS)
-
-Parser.o: Parser.c
-	$(CC) -c Parser.c -o Parser.o $(CFLAGS)
-
-Tree.o: Tree.c
-	$(CC) -c Tree.c -o Tree.o $(CFLAGS)
-
-Lib.o: Lib.c
-	$(CC) -c Lib.c -o Lib.o $(CFLAGS)
+	$(CC) $(LINKOBJ) -o "SS1.exe" $(LIBS)
 
 Scanner.o: Scanner.c
 	$(CC) -c Scanner.c -o Scanner.o $(CFLAGS)
 
-Array.o: Array.c
-	$(CC) -c Array.c -o Array.o $(CFLAGS)
-
-Compiler.o: Compiler.c
-	$(CC) -c Compiler.c -o Compiler.o $(CFLAGS)
-
-HashTable.o: HashTable.c
-	$(CC) -c HashTable.c -o HashTable.o $(CFLAGS)
-
-Generator.o: Generator.c
-	$(CC) -c Generator.c -o Generator.o $(CFLAGS)
-
 main.o: main.c
 	$(CC) -c main.c -o main.o $(CFLAGS)
 
-Assembler.o: Assembler.c
-	$(CC) -c Assembler.c -o Assembler.o $(CFLAGS)
+Array.o: Array.c
+	$(CC) -c Array.c -o Array.o $(CFLAGS)
 
-Cpu0.o: Cpu0.c
-	$(CC) -c Cpu0.c -o Cpu0.o $(CFLAGS)
-
-OpTable.o: OpTable.c
-	$(CC) -c OpTable.c -o OpTable.o $(CFLAGS)
+Lib.o: Lib.c
+	$(CC) -c Lib.c -o Lib.o $(CFLAGS)
